-I try to use CRUD and understand it

--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.springMVCExample</groupId>
-  <artifactId>SprinMVCProject</artifactId>
+  <artifactId>firstCRUDProject</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>SprinMVCProject Maven Webapp</name>
+  <name>firstCRUDProject Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -67,7 +67,7 @@
   </dependencies>
 
   <build>
-    <finalName>SprinMVCProject</finalName>
+    <finalName>firstCRUDProject</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -101,5 +101,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>8</source>
+                  <target>8</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
