--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.4.Final</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
