--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
       <version>7.0.4.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.3</version>
+    </dependency>
 
 
   </dependencies>
